add pwa features with workbox

--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&family=Noto+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" 
+      type="image/png" 
+      href="img/favicon.ico">
+      <link rel="manifest" href="/manifest.json">
+      <meta name="theme-color" content="#f1c40f"/>
+      <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
+
     <title>Quotipan</title>
   </head>
   <body>
     <nav class="navbar navbar-light bg-light max-vh-md-20">
       <div class="container d-flex justify-content-between">
-        <span class="navbar-brand mb-0 h1"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-width="48" height="48"
+        <span class="navbar-brand mb-0 h1"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="48" height="48"
 viewBox="0 0 171 171"
 style=" fill:#000000;"><defs><linearGradient x1="45.19388" y1="16.359" x2="126.75375" y2="149.05856" gradientUnits="userSpaceOnUse" id="color-1_5c1wVzjOU4A2_gr1"><stop offset="0" stop-color="#e67e22"></stop><stop offset="1" stop-color="#f1c40f"></stop></linearGradient></defs><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,171.99474v-171.99474h171.99474v171.99474z" fill="none"></path><g><path d="M149.625,28.5h-128.25c-3.93656,0 -7.125,3.18844 -7.125,7.125v92.625c0,3.93656 3.18844,7.125 7.125,7.125h28.5v28.49288c0,3.17419 3.83681,4.76306 6.08119,2.51869l31.01156,-31.01156h62.65725c3.93656,0 7.125,-3.18844 7.125,-7.125v-92.625c0,-3.93656 -3.18844,-7.125 -7.125,-7.125z" fill="url(#color-1_5c1wVzjOU4A2_gr1)"></path><path d="M55.42894,114.03919c-3.07088,0 -5.57175,-2.49375 -5.57175,-5.56106c0,-2.337 1.46063,-4.42819 3.63731,-5.20125c5.53256,-1.97362 13.68,-8.95612 14.16094,-20.2635c-1.30744,0.39187 -3.06019,0.73387 -5.33306,0.73387c-7.71638,0 -16.04194,-6.17381 -16.04194,-16.14881c0,-8.71031 6.669,-17.72344 17.82675,-17.72344c10.30631,0 21.39281,7.86244 21.39281,25.12631c0,23.769 -17.51681,34.40662 -27.96206,38.62819c-0.66975,0.27075 -1.38225,0.40969 -2.109,0.40969z" fill="#000000" opacity="0.05"></path><path d="M55.42894,112.25794c-2.09119,0 -3.7905,-1.69575 -3.7905,-3.77981c0,-1.58531 0.98325,-2.99962 2.451,-3.52331c6.17381,-2.20162 15.36506,-10.13887 15.36506,-22.98881c0,-0.70538 -0.04275,-1.19344 -0.0855,-1.52119c-0.01069,0.00356 -0.01781,0.00713 -0.0285,0.01069c-1.25756,0.56644 -3.35944,1.50694 -7.02169,1.50694c-6.85781,0 -14.26069,-5.49337 -14.26069,-14.36756c0,-7.8375 6.00281,-15.94219 16.0455,-15.94219c9.44419,0 19.61156,7.30669 19.61156,23.34506c0,22.72519 -16.82213,32.92106 -26.847,36.97519c-0.46312,0.19238 -0.94763,0.285 -1.43925,0.285z" fill="#000000" opacity="0.07"></path><path d="M53.41613,108.48169v0c0,-0.81938 0.49875,-1.57106 1.26825,-1.84894c6.5265,-2.32631 16.54425,-10.88344 16.54425,-24.66675c0,-2.36906 -0.40613,-3.56606 -1.31812,-3.56606c-1.07231,0 -2.77162,1.78481 -7.59525,1.78481c-5.86388,0 -12.483,-4.674 -12.483,-12.58631c0,-6.9255 5.19412,-14.16094 14.26425,-14.16094c7.37438,0 17.83031,5.49694 17.83031,21.56381c0,22.25137 -16.75444,31.692 -25.7355,35.32575c-1.31812,0.53437 -2.77519,-0.41681 -2.77519,-1.84538z" fill="#ffffff"></path><path d="M94.65919,114.03919c-3.07087,0 -5.57175,-2.49375 -5.57175,-5.56106c0,-2.337 1.46062,-4.42819 3.63731,-5.20125c5.53256,-1.97362 13.68,-8.95612 14.16094,-20.2635c-1.30744,0.39187 -3.06019,0.73387 -5.33306,0.73387c-7.71638,0 -16.04194,-6.17381 -16.04194,-16.14881c0,-8.71031 6.669,-17.72344 17.82675,-17.72344c10.30631,0 21.39281,7.86244 21.39281,25.12631c0,23.769 -17.51681,34.40662 -27.96206,38.62819c-0.66619,0.27075 -1.38225,0.40969 -2.109,0.40969z" fill="#000000" opacity="0.05"></path><path d="M94.65919,112.25794c-2.09119,0 -3.7905,-1.69575 -3.7905,-3.77981c0,-1.58531 0.98325,-2.99962 2.451,-3.52331c6.17381,-2.20162 15.36506,-10.13887 15.36506,-22.98881c0,-0.70538 -0.04275,-1.19344 -0.0855,-1.52119c-0.01069,0.00356 -0.01781,0.00713 -0.0285,0.01069c-1.25756,0.56644 -3.35944,1.50694 -7.02169,1.50694c-6.85781,0 -14.26069,-5.49337 -14.26069,-14.36756c0,-7.8375 6.00281,-15.94219 16.0455,-15.94219c9.44419,0 19.61156,7.30669 19.61156,23.34506c0,22.72519 -16.82212,32.92106 -26.847,36.97519c-0.45956,0.19238 -0.94406,0.285 -1.43925,0.285z" fill="#000000" opacity="0.07"></path><path d="M92.64994,108.48169v0c0,-0.81938 0.49875,-1.57106 1.26825,-1.84894c6.5265,-2.32631 16.54425,-10.88344 16.54425,-24.66675c0,-2.36906 -0.40613,-3.56606 -1.31813,-3.56606c-1.07231,0 -2.77162,1.78481 -7.59525,1.78481c-5.86387,0 -12.483,-4.674 -12.483,-12.58631c0,-6.9255 5.19412,-14.16094 14.26425,-14.16094c7.37438,0 17.83031,5.49694 17.83031,21.56381c0,22.25137 -16.75444,31.692 -25.7355,35.32575c-1.31813,0.53437 -2.77519,-0.41681 -2.77519,-1.84538z" fill="#ffffff"></path></g></g></svg> Quotipan</span>
         <span><i class="fa fa-chevron-down btn-hover p-1" aria-hidden="true" data-toggle="modal" data-target="#info"></i></span>
@@ -45,17 +51,33 @@ style=" fill:#000000;"><defs><linearGradient x1="45.19388" y1="16.359" x2="126.7
     </div>
   </div>
 </div>
-
     <div id="kutipan" class=" mt-3 p-3 min-vh-40 d-flex justify-content-between align-items-lg-center flex-column"></div>
     <div id="btn" class="d-flex justify-content-between flex-lg-column p-5">
       <button type="button" class="screenshot p-3 mb-lg-3 btn btn-outline-dark">Screenshot</button>
-      <button type="button" class="refresh p-3 mb-lg-3 btn btn-outline-dark">Refresh</button>
+      <button type="button" class="refresh p-3  mb-lg-3 btn btn-outline-dark">Refresh</button>
     </div>
 
 
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-popRpmFF9JQgExhfw5tZT4I9/CI5e2QcuUZPOVXb1m7qUmeR2b50u+YFEYe1wgzy" crossorigin="anonymous"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <script>
+        // REGISTER SERVICE WORKER
+  if ("serviceWorker" in navigator) {
+    window.addEventListener("load", function() {
+      navigator.serviceWorker
+        .register("/service-worker.js")
+        .then(function() {
+          console.log("Pendaftaran ServiceWorker berhasil");
+        })
+        .catch(function() {
+          console.log("Pendaftaran ServiceWorker gagal");
+        });
+    });
+  } else {
+    console.log("ServiceWorker belum didukung browser ini.");
+  }
+    </script>
 
 
   </body>
